# grafana-plugin-sdk-rust

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs  crates.js  help.html  release.toml  renovate.json  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: changelog.yml  rust.yml  rustdoc.yml
crates/grafana-plugin-sdk/: Cargo.toml  build.rs
crates/grafana-plugin-sdk-macros/: Cargo.toml  release.toml
crates/grafana-plugin-sdk-macros/src/: lib.rs
crates/grafana-plugin-sdk-macros/tests/ui-fail/: duplicate_services.rs  duplicate_services.stderr  invalid_init_subscriber.rs  invalid_init_subscriber.stderr  invalid_shutdown_handler.rs  invalid_shutdown_handler.stderr  missing_services.rs  missing_services.stderr  non_impl_service.rs  non_impl_service.stderr
crates/grafana-plugin-sdk-macros/tests/ui-pass/: basic.rs  init_subscriber.rs  shutdown_handler.rs
crates/grafana-plugin-sdk/examples/: main.rs
crates/grafana-plugin-sdk/src/: lib.rs  pluginv3.rs
crates/grafana-plugin-sdk/src/backend/: data.rs  diagnostics.rs  error_source.rs  grafana_config.rs  mod.rs  noop.rs  resource.rs  stream.rs  tracing_fmt.rs
crates/grafana-plugin-sdk/src/data/: error.rs  field.rs  field_type.rs  mod.rs
crates/grafana-plugin-sdk/src/data/frame/: arrow.rs  de.rs  mod.rs  ser.rs  to_arrow.rs
crates/grafana-plugin-sdk/src/live/: channel.rs  mod.rs
crates/grafana-plugin-sdk/src/pluginv2/: pluginv2.rs
examples/: main.rs
grafana-plugin-sdk-macros/: Cargo.toml
grafana-plugin-sdk-macros/src/: lib.rs
grafana-plugin-sdk-macros/tests/: main.rs  test.rs
grafana-plugin-sdk-macros/tests/ui-fail/: duplicate_services.stderr  invalid_init_subscriber.rs  invalid_shutdown_handler.stderr  non_impl_service.stderr
grafana-plugin-sdk-macros/tests/ui-pass/: basic.rs  init_subscriber.rs  shutdown_handler.rs
grafana_plugin_sdk/: all.html  attr.main.html  index.html  sidebar-items.js
grafana_plugin_sdk/backend/: attr.async_trait.html  enum.ConvertFromError.html  enum.ConvertToError.html  enum.DataQueryStatus.html  enum.Error.html  enum.ErrorSource.html  enum.HealthStatus.html  enum.PublishStreamStatus.html  enum.Role.html  enum.SubscribeStreamStatus.html  fn.initialize.html  fn.layer.html  index.html  sidebar-items.js  struct.AppInstanceSettings.html  struct.AppPlugin.html  struct.CheckHealthResponse.html  struct.CollectMetricsResponse.html  struct.ConfigError.html  struct.DataQuery.html  struct.DataResponse.html  struct.DataSourceInstanceSettings.html  struct.DataSourcePlugin.html  struct.GrafanaConfig.html  struct.HCLogJson.html  struct.InitialData.html  struct.MetricsPayload.html  struct.Plugin.html  struct.PluginContext.html  struct.PublishStreamResponse.html  struct.StreamPacket.html  struct.SubscribeStreamResponse.html  struct.TimeRange.html  struct.User.html  trait.DataQueryError.html  trait.DataService.html  trait.DiagnosticsService.html  trait.ErrIntoHttpResponse.html  trait.GrafanaPlugin.html  trait.InstanceSettings.html  (+15 more)
grafana_plugin_sdk/data/: constant.EXPLICIT_NULL.html  constant.TIME_FIELD_NAME.html  constant.VALUE_FIELD_NAME.html  enum.Error.html  enum.FrameInclude.html  enum.InspectType.html  enum.Severity.html  enum.SimpleType.html  enum.SpecialValueMatch.html  enum.ThresholdsMode.html  enum.TypeInfoType.html  enum.ValueMapping.html  enum.VisType.html  index.html  sidebar-items.js  struct.CheckedFrame.html  struct.ConfFloat64.html  struct.DataLink.html  struct.Field.html  struct.FieldConfig.html  struct.Frame.html  struct.Metadata.html  struct.Notice.html  struct.QueryStat.html  struct.Threshold.html  struct.ThresholdsConfig.html  struct.TypeInfo.html  struct.ValueMappingResult.html  trait.ArrayIntoField.html  trait.ArrayRefIntoField.html  trait.FieldType.html  trait.FromFields.html  trait.IntoField.html  trait.IntoFieldType.html  trait.IntoFrame.html  trait.IntoOptField.html
grafana_plugin_sdk/live/: constant.MAX_CHANNEL_LENGTH.html  enum.ChannelError.html  enum.Scope.html  index.html  sidebar-items.js  struct.Channel.html  struct.Namespace.html  struct.Path.html
grafana_plugin_sdk/pluginv2/: index.html  sidebar-items.js  struct.AdmissionRequest.html  struct.AppInstanceSettings.html  struct.CallResourceRequest.html  struct.CallResourceResponse.html  struct.CheckHealthRequest.html  struct.CheckHealthResponse.html  struct.CollectMetricsRequest.html  struct.CollectMetricsResponse.html  struct.ConversionRequest.html  struct.ConversionResponse.html  struct.DataQuery.html  struct.DataResponse.html  struct.DataSourceInstanceSettings.html  struct.GroupVersion.html  struct.GroupVersionKind.html  struct.MutationResponse.html  struct.PluginContext.html  struct.PublishStreamRequest.html  struct.PublishStreamResponse.html  struct.QueryDataRequest.html  struct.QueryDataResponse.html  struct.RawObject.html  struct.RunStreamRequest.html  struct.StatusResult.html  struct.StreamPacket.html  struct.StringList.html  struct.SubscribeStreamRequest.html  struct.SubscribeStreamResponse.html  struct.TimeRange.html  struct.User.html  struct.ValidationResponse.html
grafana_plugin_sdk/prelude/: index.html
grafana_plugin_sdk_macros/: all.html  attr.main.html  index.html  sidebar-items.js
search.desc/grafana_plugin_sdk/: grafana_plugin_sdk-desc-0-.js
search.desc/grafana_plugin_sdk_macros/: grafana_plugin_sdk_macros-desc-0-.js
search.index/: 004ff6b943b9.js  00db7aa57b.js  010d939af7.js  011ef8c8cd98.js  01a5a7e95ed6.js  01c230b0cf.js  0206d7f402.js  0246ae43f2.js  0284da456afe.js  02ee748a4c.js  030eff6c6d.js  033782e32a76.js  03d97c83eea1.js  04293a11e9.js  04482db684.js  048d735997.js  04b7d133fb94.js  04c8e8588f.js  0543814b0b.js  06577f015c.js  0658b5072e.js  0751c5283eb2.js  07bd860a6029.js  07c12fa108.js  0818980656.js  08192d167e.js  081e4f127a.js  088f85fb5961.js  08b0af0b4abc.js  090ed2e74c.js  09cfb26b83.js  0b6116c5f18e.js  0b99f7525aa6.js  0bb9bc93a2.js  0be4f71abc.js  0bf8d54e44.js  0c5fc84ac418.js  0cbe6f29c2.js  0d4ae9fa8f.js  0d88ea13db.js  (+219 more)
src/: backend.rs  data.rs  lib.rs
src/backend/: data.rs  mod.rs  (+5 more)
(+221 files in other folders)
