[package]
name = "grafana-plugin-sdk"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = { version = "0.5.3", features = ["io_ipc"] }
chrono = "0.4.19"
futures-core = "0.3.17"
futures-util = "0.3.17"
num-traits = "0.2.14"
prost = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
serde_with = "1.7.0"
thiserror = "1.0.24"
tonic = "0.4.2"
tokio = "1.4.0"

[dev-dependencies]
async-stream = "0.3.2"
futures = "0.3.13"
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.7"
tonic-health = "0.3.1"

[build-dependencies]
tonic-build = "0.4.2"
