[package]
name = "grafana-plugin-sdk-macros"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["full"] }

[dev-dependencies]
grafana-plugin-sdk = { version = "0.1.0", path = ".." }
tokio = { version = "1", features = ["rt-multi-thread"] }
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true
