[package]
name = "grafana-plugin-sdk-macros"
version = "0.4.2"
authors = ["Ben Sully <ben.sully@grafana.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/grafana/grafana-plugin-sdk-rust"
description = "Convenience macros for the Grafana backend plugin SDK."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "2.0.4", features = ["full"] }

[dev-dependencies]
grafana-plugin-sdk = { path = "../grafana-plugin-sdk" }
http = "0.2.8"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"
tokio = { version = "1.13.0", features = ["rt-multi-thread"] }
trybuild = "1.0.52"

[package.metadata.docs.rs]
all-features = true
