[package]
name = "grafana-plugin-sdk-macros"
version = "0.5.0"
authors = ["Ben Sully <ben.sully@grafana.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/grafana/grafana-plugin-sdk-rust"
description = "Convenience macros for the Grafana backend plugin SDK."

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }

[dev-dependencies]
grafana-plugin-sdk = { path = "../grafana-plugin-sdk" }
http = "1.0.0"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.38.2", features = ["rt-multi-thread"] }
trybuild = "1.0.80"

[package.metadata.docs.rs]
all-features = true
